# hirop_app

app_move_pick/: CMakeLists.txt  package.xml
app_move_pick/src/: auto_move_pick.cpp  auto_move_pick.h  main.cpp  timer.h
